@@ -9,7 +9,7 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>6.8.1</version>
+            <version>7.3.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -46,7 +46,42 @@
                         </configuration>
                     </execution>
                 </executions>
+                <configuration>
+                    <compilerArgs>
+                        <arg>-Xlint</arg>
+                    </compilerArgs>
+                </configuration>
             </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <showSuccess>true</showSuccess>
+                    <trimStackTrace>true</trimStackTrace>
+                    <properties>
+                        <property>
+                            <name>verbose</name>
+                            <value>2</value>
+                        </property>
+                    </properties>
+                    <systemPropertyVariables>
+                        <java.util.logging.config.file>${project.basedir}/logging.properties</java.util.logging.config.file>
+                        <jpype.path>../..</jpype.path>
+                        <jpype.nocache>false</jpype.nocache>
+                        <python.executable>python3.12</python.executable>
+                        <python.config.home>/usr</python.config.home>
+                    </systemPropertyVariables>
+                    <argLine>
+                        --enable-native-access=ALL-UNNAMED
+                        --enable-native-access=org.jpype
+                        --module-path=${project.build.directory}/${project.build.finalName}.jar
+                        --add-modules=org.jpype
+                    </argLine>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
     <name>jpype_module</name>
